--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,22 +5,12 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".MainActivity2">
 
     <Button
-        android:id="@+id/buttonToActivity2"
+        android:id="@+id/buttonToActivity3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ir a la Pantalla 2" />
-
+        android:text="Ir a la Pantalla 3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
